robin v1.2.0
- implementing robin class
- adding weighted graph procedure
robin v1.1.2
- fixed Note CRAN
robin v1.1.1
-imported gptk and gprege functions for dependency problems
robin v1.1.0
-robinCompareFast parallelized function
robin v1.0.3
-changed reference
robin v1.0.2
-pvalue inserted in FDATest
robin v1.0.1
-verbose added and changes in GPTest input
robin v1.0.0
- Clarifications and documentation improvements
robin v0.99.1
- minor fixing