@@ -1,6 +1,7 @@
 robin v1.2.0
 - implementing robin class
 - adding weighted graph procedure
+- new parallelization method with BiocParallel::bpparam()
 robin v1.1.2
 - fixed Note CRAN
 robin v1.1.1
